--- a/2017_teams/_posts/2017-05-31-team-1.markdown
+++ b/2017_teams/_posts/2017-05-31-team-1.markdown
@@ -2,7 +2,7 @@
 title: Name
 name: Name 1
 subtitle: Position
-layout: 2017_default
+layout: default
 img: TBS.jpg
 thumbnail: TBD.jpg
 alt: Picture of Name
